@@ -14,6 +14,83 @@
 using namespace std;
 using namespace Test;
 
+class CallbackBase : public IceUtil::Monitor<IceUtil::Mutex>
+{
+public:
+
+    CallbackBase() :
+	_called(false)
+    {
+    }
+
+    virtual ~CallbackBase()
+    {
+    }
+
+    bool check()
+    {
+	IceUtil::Monitor<IceUtil::Mutex>::Lock sync(*this);
+	while(!_called)
+	{
+	    if(!timedWait(IceUtil::Time::seconds(5)))
+	    {
+		return false;
+	    }
+	}
+	_called = false;
+	return true;
+    }
+
+protected:
+
+    void called()
+    {
+	IceUtil::Monitor<IceUtil::Mutex>::Lock sync(*this);
+	assert(!_called);
+	_called = true;
+	notify();
+    }
+
+private:
+
+    bool _called;
+};
+
+class AMIRegular : public Test::AMI_Retry_op, public CallbackBase
+{
+public:
+
+    virtual void ice_response()
+    {
+	called();
+    }
+
+    virtual void ice_exception(const ::Ice::Exception&)
+    {
+	test(false);
+    }
+};
+
+typedef IceUtil::Handle<AMIRegular> AMIRegularPtr;
+
+class AMIException : public Test::AMI_Retry_op, public CallbackBase
+{
+public:
+
+    virtual void ice_response()
+    {
+	test(false);
+    }
+
+    virtual void ice_exception(const ::Ice::Exception& ex)
+    {
+	test(dynamic_cast<const Ice::ConnectionLostException*>(&ex));
+	called();
+    }
+};
+
+typedef IceUtil::Handle<AMIException> AMIExceptionPtr;
+
 RetryPrx
 allTests(const Ice::CommunicatorPtr& communicator)
 {
@@ -34,11 +111,11 @@ allTests(const Ice::CommunicatorPtr& communicator)
     test(retry2 == base2);
     cout << "ok" << endl;
 
-    cout << "calling regular operation with first proxy... ";
+    cout << "calling regular operation with first proxy... " << flush;
     retry1->op(false);
     cout << "ok" << endl;
 
-    cout << "calling operation to kill connection with second proxy... ";
+    cout << "calling operation to kill connection with second proxy... " << flush;
     try
     {
 	retry2->op(true);
@@ -49,8 +126,26 @@ allTests(const Ice::CommunicatorPtr& communicator)
 	cout << "ok" << endl;
     }
 
-    cout << "calling regular operation with first proxy again... ";
+    cout << "calling regular operation with first proxy again... " << flush;
     retry1->op(false);
+    cout << "ok" << endl;
+
+    AMIRegularPtr cb1 = new AMIRegular;
+    AMIExceptionPtr cb2 = new AMIException;
+
+    cout << "calling regular AMI operation with first proxy... " << flush;
+    retry1->op_async(cb1, false);
+    test(cb1->check());
+    cout << "ok" << endl;
+
+    cout << "calling AMI operation to kill connection with second proxy... " << flush;
+    retry2->op_async(cb2, true);
+    test(cb2->check());
+    cout << "ok" << endl;
+
+    cout << "calling regular AMI operation with first proxy again... " << flush;
+    retry1->op_async(cb1, false);
+    test(cb1->check());
     cout << "ok" << endl;
 
     return retry1;
